# nm-opernfortivpn

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml  release.yml
data/: nm-openfortivpn.conf  nm-openfortivpn.name.in  org.freedesktop.NetworkManager.openfortivpn.service.in
packaging/: PKGBUILD  nm-openfortivpn.spec
packaging/debian/: changelog  control  copyright  rules
shared/: nm-openfortivpn-keys.h  nm_openfortivpn_keys.py
src/auth-dialog/: nm-openfortivpn-auth-dialog
src/editor/: nm-openfortivpn-editor.c  nm-openfortivpn-editor.h
src/pppd-plugin/: nm-openfortivpn-pppd-plugin.c
src/service/: nm-openfortivpn-service  nm_openfortivpn_service.py
tests/: meson.build  test_cert_parsing.py  test_config_generation.py  test_integration.py  test_pppd_plugin.c  test_security.py
